Fixed 131072 tile font size on mobile

--- a/style/alternatetheme1.css
+++ b/style/alternatetheme1.css
@@ -608,7 +608,7 @@ hr {
     font-size: 25px;
     box-shadow: 0 0 30px 10px rgba(94, 94, 94, 0.75556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333); }
     @media screen and (max-width: 480px) {
-      .tile.tile-65536 .tile-inner {
+      .tile.tile-131072 .tile-inner {
         font-size: 10px; } }
   .tile.tile-262144 .tile-inner {
     color: #f9f6f2;
